Updated swagger docs and tags for google authentication.
